Fixed align of logo, 'Recruitment is open' label, 'Rating' and 'Education form'

--- a/src/app/shared/components/workshop-card/workshop-card.component.scss
+++ b/src/app/shared/components/workshop-card/workshop-card.component.scss
@@ -11,6 +11,11 @@
 .provider-content {
   min-height: 2rem;
 }
+.workshop-title-container{
+  display: flex;
+  align-items: center;
+  height: inherit;
+}
 .icon {
   display: flex;
   flex-direction: row;
